# HomeWork-12.1

./: .coverage  .env  .env.example  .env_example  .gitignore  README.md  main.py  pyproject.toml
htmlcov/: .gitignore  index.html
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  transactions.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
